[+] Added images to the example

--- a/credits/credits.html
+++ b/credits/credits.html
@@ -53,6 +53,8 @@
 
 <section class='casting'>
 	<h2>Casting</h2>
+	<img src='credits/img-1.jpg' style='top: 250px' />
+	<img src='credits/img-2.jpg' style='top: 600px; right: 0;' class='right'/>
 	<table data-columns='2'>
 		<tr>
 			<td>
